--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A blog made with react and express, this is the backend section",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index.js"
+    "start": "nodemon ./index.js",
+    "test": "jest --forceExit"
   },
   "repository": "https://tludlow99@github.com/tludlow99/stories-backend.git",
   "author": "Thomas Ludlow <twjludlow@gmail.com>",
@@ -13,7 +14,13 @@
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "jest": "^21.2.1",
     "jsonwebtoken": "^7.4.1",
-    "mongoose": "^4.11.4"
+    "mongoose": "^4.11.4",
+    "supertest": "^3.0.0"
+  },
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   }
 }
