--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Thomas Ludlow <twjludlow@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.17.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
