--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.15.3",
     "jest": "^21.2.1",
     "jsonwebtoken": "^7.4.1",
+    "moment": "^2.19.1",
     "mongoose": "^4.11.4",
     "supertest": "^3.0.0"
   },
