--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "axios": "^0.17.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.2",
+    "chai": "3.2.0",
+    "chai-http": "1.0.0",
     "express": "^4.15.3",
     "jest": "^21.2.1",
     "jsonwebtoken": "^7.4.1",
+    "mocha": "2.3.1",
     "moment": "^2.19.1",
     "mongoose": "^4.11.4",
     "supertest": "^3.0.0"
